# criterion-drift-local

./: README.md  RESEARCH.md  SECURITY_REVIEW.md  project_config.json  pyproject.toml
src/criterion_drift_local/: engine.py
tests/: test_workflow.py
