[project]
name = "criterion-drift-local"
version = "0.1.0"
description = "Offline healthcare document-intake criterion drift detector for referrals, prior auth, and fax workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.15.13",
]

[project.scripts]
criterion-drift = "criterion_drift_local.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
